--- a/requirements.txt
+++ b/requirements.txt
@@ -3,7 +3,7 @@ colour
 deezloader
 emoji-country-flag
 google
-google_trans_new
+git+https://github.com/lostb053/google_trans_new
 glitch-this
 gtts
 humanize
